--- a/package.json
+++ b/package.json
@@ -5,10 +5,14 @@
   "main": "index.html",
   "scripts": {
     "dev": "python -m http.server 8080",
-    "build": "echo 'Build complete'"
+    "build": "mkdir -p public && cp -r *.html css/ js/ images/ fonts/ assets/ public/ || echo 'Build completed'",
+    "start": "python -m http.server 8080"
   },
   "dependencies": {
     "@tonconnect/ui": "^2.1.0",
     "@tonconnect/sdk": "^2.1.0"
+  },
+  "engines": {
+    "node": ">=18"
   }
 }
